[gd_scene load_steps=7 format=2]

[ext_resource path="res://Entities/Attacks/Attack.tscn" type="PackedScene" id=1]
[ext_resource path="res://Entities/Attacks/Melee/Melee.gd" type="Script" id=2]

[sub_resource type="ShaderMaterial" id=5]
resource_local_to_scene = true

[sub_resource type="Animation" id=2]
resource_local_to_scene = true
resource_name = "animation"
length = 0.2
step = 0.01

[sub_resource type="Animation" id=3]
resource_local_to_scene = true
resource_name = "animation_reverse"
length = 0.2
step = 0.01

[sub_resource type="Animation" id=4]

[node name="Melee" instance=ExtResource( 1 )]
rotation = 0.0
script = ExtResource( 2 )
truName = "(melee)"
RANGE = 4
HOLDS = false
RECOIL = 70
ANIMATION_NEVER_BACKWARDS = false
HIDE_HELD_ITEM = true
REVERSE_HELD_ITEM = true

[node name="entity_sprite" parent="." index="0"]
material = SubResource( 5 )

[node name="hitbox" parent="." index="1"]
visible = false
position = Vector2( 4, 0 )

[node name="CollisionShape2D" parent="hitbox" index="0"]
rotation = -1.5708

[node name="animation" type="AnimationPlayer" parent="." index="4"]
anims/animation = SubResource( 2 )
anims/animation_reverse = SubResource( 3 )
anims/hold = SubResource( 4 )

[connection signal="tree_exiting" from="." to="." method="_on_Melee_tree_exiting"]
[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="animation_finished" from="animation" to="." method="_on_animation_animation_finished"]

[editable path="entity_sprite"]
[editable path="hitbox"]
